<resources>
    <string name="app_name">Shared Preferences</string>

    <string name="manu_settings_tittle">Settings</string>

    <string name="preference_gender_key">gender</string>
    <string name="preference_gender_tittle">Gender</string>
    <string name="preference_gender_summary_off">Female</string>
    <string name="preference_gender_summary_on">Male</string>


    <string name="pref_color_label">Background Color</string>

    <string name="pref_color_label_red">Red</string>
    <string name="pref_color_label_blue">Blue</string>
    <string name="pref_color_label_green">Green</string>

    <string name="pref_color_key" translatable="false">color</string>

    <string name="pref_color_red_value" translatable="false">red</string>
    <string name="pref_color_blue_value" translatable="false">blue</string>
    <string name="pref_color_green_value" translatable="false">green</string>
    <string name="pref_color_default" translatable="false">white</string>
    
    
    <string name="pref_age_label">Age</string>
    <string name="pref_age_key" translatable="false">age</string>
    <string name="pref_age_default" translatable="false">20</string>
</resources>
